admission/validatingAdmissionPolicies/policies/capabilities-drop-all/initcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: capabilities-drop-all-initcontainers
  annotations:
    security.kubeapt.io/displayName: 'Capabilities Drop All'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for capabilities-drop-all/initcontainers.
    security.kubeapt.io/resource: Initcontainers
    security.kubeapt.io/severity: medium
    security.kubeapt.io/remediation: Adjust workloads to satisfy the capabilities-drop-all/initcontainers policy.
    policies.kolteq.com/validatingAdmissionPolicy: e1ac01ae-4714-50d5-a2ed-9cb79fd53e42
  labels:
    capabilities-drop-all-initcontainers.security.kolteq.com/audit: 'false,true'
    capabilities-drop-all-initcontainers.security.kolteq.com/enforce: 'false,true'
    capabilities-drop-all-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(ic,
          has(ic.securityContext) &&
          has(ic.securityContext.capabilities) &&
          has(ic.securityContext.capabilities.drop) &&
          ic.securityContext.capabilities.drop.exists(d, d == "ALL")
        )
      message: >
        spec.initContainers[*].securityContext.capabilities.drop must exist and include "ALL".
